[package]
name = "slang-native-playground-example"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.6"
pollster = "0.4.0"
wgpu = { version = "25.0.2", features = ["serde"] }
winit = "0.30.12"
bytemuck = "1.23.2"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
ron = "0.11.0"
flume = "0.11.1"
web-time = "1.1.0"
futures = "0.3.31"
egui-winit = { version = "0.32.2", default-features = false, features = [
    "links",
    "wayland",
    "x11",
] }
slang-playground-compiler = { git = "https://github.com/Devon7925/slang-native-playground" }
slang-shader-macros = { git = "https://github.com/Devon7925/slang-native-playground" }
slang-renderer = { git = "https://github.com/Devon7925/slang-native-playground" }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.1", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"
js-sys = "0.3.85"
wasm-bindgen-futures = "0.4.58"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-wgpu = "0.32.2"
egui = "0.32.2"
slang-debug-app = { git = "https://github.com/Devon7925/slang-native-playground" }